feat: Gemini 기반 문장 의미 분석 도입 및 사전 검색(최근 검색 기록 포함) 기능 구현